finish!! this program

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@
 plugins {
     // Apply the java-library plugin to add support for Java Library
     id 'java-library'
+    apply plugin : 'application'
+	mainClassName = "edu.handong.csee.java.chatCounter.ChatCounter"
 }
 
 dependencies {
